--- a/src/components/rol/sheet/styles.css
+++ b/src/components/rol/sheet/styles.css
@@ -154,5 +154,26 @@ body[data-theme="dark"] {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border: 1px solid #ddd; /* Optional for visual debugging */
+  border: 1px solid #ddd;
+}
+.select-container {
+  display: inline-block;
+  width: 100px;
+  height: 20px;
+  background-color: #f0f0f0;
+  color: var(--text-color);
+  overflow: hidden;
+  font-size: 16px;
+}
+
+.select-container select {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  color: inherit;
+  border: none;
+  padding: 0 8px;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: inherit;
 }
