addede deleteion character

--- a/src/components/rol/play/chat.css
+++ b/src/components/rol/play/chat.css
@@ -142,3 +142,8 @@
   align-items: center;
   margin-top: 20px;
 }
+
+.confirmation-modal__buttons {
+  display: flex;
+  justify-content: space-between;
+}
