--- a/src/components/rol/editor/sideBar/directorySystem/nodes/nodes.css
+++ b/src/components/rol/editor/sideBar/directorySystem/nodes/nodes.css
@@ -26,6 +26,10 @@
   display: flex;
   align-items: center;
   font-weight: inherit;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+  max-width: 100px;
 }
 
 .nodeTree {
