--- a/src/components/rol/editor/blockyEditor/BlocklyEditor.css
+++ b/src/components/rol/editor/blockyEditor/BlocklyEditor.css
@@ -1,7 +1,7 @@
 .parent-container {
   display: flex;
   flex-direction: column;
-  height: 40vh;
+  height: 100%;
   padding: 10px;
   box-sizing: border-box;
   border: 1px solid #ccc;
